fix bug 1212 - change css layout settings to shift text away from extreme left and right margins
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/alpine@6021 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/doc/usermanual/src/stylesheets/metavize.css
+++ b/doc/usermanual/src/stylesheets/metavize.css
@@ -52,8 +52,10 @@ body {
 }
 
 /* WRS: Changed to only pad left.  It made the hyperlinked area way too small */
-.sect1, .chapter, .synopsis, .appendix, .preface, .article, .refsect1, .index, .glossary, .section {
+/* Also, add pad right and add other sections */
+.sect1, .sect2, .sect3, .sect4, .chapter, .synopsis, .appendix, .preface, .article, .refsect1, .index, .glossary, .section {
   padding-left: 1em;
+  padding-right: 1em;
 }
 
 .toc .chapter {
